addons/cilium/httproute-hubble.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway # Using central gateway in "gateway" namespace
      name: core
      sectionName: https
  hostnames:
    - hubble.nodes.ee
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
          weight: 1
          kind: Service
          group: ""
      matches:
        - path:
            type: PathPrefix
            value: /
